--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copy To Clipboard</title>
+    <!-- favicon  -->
+    <link rel="shortcut icon" href="./icons/arrow-forward 1.svg" type="image/x-icon">
+    <!-- tailwind css -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    
+
+<body class="bg-gray-800">
+    <main class="">
+        <div
+            class="container text-center w-2/4 border-2 mx-auto my-20 p-10 bg-[#8D3DAF] rounded-3xl border-black drop-shadow-2xl">
+            <h1 class="text-5xl text-bold uppercase text-black my-6 border-b-4 pb-4">Copy to
+                clipboard</h1>
+            <div class="">
+                <p class="text-gray-200 text-justify border-2 p-4 rounded-3xl border-black drop-shadow-2xl">Lorem ipsum
+                    dolor sit amet,
+                    consectetur adipisicing elit. Similique nemo tempora saepe ipsa veritatis dolores! Nihil voluptas
+                    enim omnis id, impedit, esse asperiores amet in fugiat dolores aliquid ipsa consequuntur doloribus
+                    architecto, earum commodi ullam tempore rerum iusto quia magni ducimus. Itaque molestiae fuga
+                    corrupti ex, tempora nobis eaque sunt.</p>
+
+                <div class="my-4">
+                    <button
+                        class="uppercase text-bold bg-white text-[#120E43] rounded-3xl px-10 py-2 text-3xl hover:text-white hover:bg-gray-600 drop-shadow-2xl hover:border-white border-2"
+                        type="submit">Copy</button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
