--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-gray-800">
     <main class="">
         <div
-            class="container text-center w-2/4 border-2 mx-auto my-20 p-10 bg-[#8D3DAF] rounded-3xl border-black drop-shadow-2xl">
+            class="container text-center w-11/12 lg:w-2/4 border-2 mx-auto my-6 lg:my-20 p-4 lg:p-10 bg-[#8D3DAF] rounded-3xl border-black drop-shadow-2xl">
             <h1 class="text-5xl text-bold uppercase text-black my-6 border-b-4 pb-4">Copy to
                 clipboard</h1>
             <div class="">
